# DMP_join

./: .gitignore  High level idea.txt  README.md
c++/install/: install_frilibrary.sh  main.sh
c++/src/dmp_join/: CMakeLists.txt  package.xml
c++/src/dmp_join/config/: Controller_config.yml  Robot_config.yml
c++/src/dmp_join/include/dmp_join/: LogData.h  dmp_join.h  utils.h
c++/src/dmp_join/include/dmp_join/Controller/: Controller.h
c++/src/dmp_join/include/dmp_join/GUI/: GUI.h
c++/src/dmp_join/include/dmp_join/GUI/gui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
c++/src/dmp_join/include/dmp_join/Robot/: LWR4p_Robot.h  Robot.h  Sim_Robot.h
c++/src/dmp_join/launch/: dmp_join_lwr4p.launch  dmp_join_robotSim.launch
c++/src/dmp_join/src/: main.cpp
c++/src/dmp_join/src/source_list/: GUI.cpp  LogData.cpp  dmp_join.cpp  utils.cpp
c++/src/dmp_join/src/source_list/Controller/: Controller.cpp
c++/src/dmp_join/src/source_list/Robot/: LWR4p_Robot.cpp  Robot.cpp  Sim_Robot.cpp
c++/src/robots/robot_sim/launch/: common.launch
c++/src/robots/robot_sim/src/: robot_sim.cpp
matlab/: createTrainingData.m  set_matlab_utils_path.m  testDMPSequencing.m  trainAndSimulateDMP.m
matlab/data/: dmp_data.mat  training_data.mat
matlab/utils/: plotData.m
matlab/utils/lib/DMP_lib/: DMP.m
