<?xml version="1.0"?>
<package>
  <name>dmp_join</name>
  <version>0.0.0</version>
  <description>DynamicMovementPrimitives_Join_project</description>

  <maintainer email="antosidi646@gmail.com">Antonis Sidiropoulos</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>roslib</build_depend>
  <run_depend>roslib</run_depend>

  <build_depend>dmp_lib</build_depend>
  <run_depend>dmp_lib</run_depend>

  <build_depend>robot_sim</build_depend>
  <run_depend>robot_sim</run_depend>

  <build_depend>io_lib</build_depend>
  <run_depend>io_lib</run_depend>

  <build_depend>math_lib</build_depend>
  <run_depend>math_lib</run_depend>

  <build_depend>lwr4p</build_depend>
  <run_depend>lwr4p</run_depend>

</package>
